# not-news-aggregator

./: .env.example  .gitignore  HERMES.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/ai_news_canvas/: MainActivity.kt
backend/: pyproject.toml
backend/app/: __init__.py  agent_events.py  config.py  fixtures.py  graph_store.py  hermes_runner.py  hermes_voice.py  kokoro_status.py  main.py  schemas.py  source_policy.py  sse.py
backend/tests/: test_sse_contract.py
hermes/ainews/: SOUL.md
hermes/ainews/memories/: USER.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/canvas/: canvas_layout.dart
lib/data/: fixture_events.dart  graph_repository.dart  research_session_client.dart  research_session_client_io.dart  research_session_client_stub.dart  sse_client.dart  sse_client_io.dart  sse_client_stub.dart  sse_client_web.dart  sse_message.dart
lib/models/: research_event.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
scripts/: backend  copy-private-env  dev  kokoro-tts  searxng  setup-hermes-ainews
searxng/: settings.yml.example
test/: canvas_layout_test.dart  graph_repository_test.dart  research_session_client_io_test.dart
web/: index.html  manifest.json
