[project]
name = "ai-news-canvas-backend"
version = "0.1.0"
description = "Local SSE backend for the AI News Canvas Flutter app."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.10.0",
  "python-multipart>=0.0.12",
  "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
